# re-static

./: README.md  pyproject.toml
.github/workflows/: ci.yml
devtools/: lint.py
src/re_static/: __init__.py
src/re_static/mypy_plugin/: plugin.py
tests/: README_MYPY_TESTING.md  pytest-mypy-plugins.ini  test_mypy_plugin.py  test_mypy_plugin_integration.yml  test_re_static.py
